--- a/app/src/main/res/layout/activity_db_testing.xml
+++ b/app/src/main/res/layout/activity_db_testing.xml
@@ -1,17 +1,28 @@
-<android.support.v4.view.ViewPager
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/viewPager"
-android:layout_width="match_parent"
-android:layout_height="match_parent">
-
-<android.support.v4.view.PagerTitleStrip
-    android:id="@+id/pager_title_strip"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="top"
-    android:background="#33b5e5"
-    android:textColor="#fff"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp" />
+    android:layout_height="match_parent"
+    >
+    <include
+        android:id="@id/toolbar"
+        layout="@layout/toolbar"/>
 
-</android.support.v4.view.ViewPager>
+    <android.support.v4.view.ViewPager
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/viewPager"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_below="@id/toolbar">
+
+    <android.support.v4.view.PagerTitleStrip
+        android:id="@+id/pager_title_strip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:background="#33b5e5"
+        android:textColor="#fff"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp" />
+
+    </android.support.v4.view.ViewPager>
+</RelativeLayout>
