--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -22,7 +22,7 @@
             android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
+        <!--
         <com.melnykov.fab.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
@@ -31,7 +31,17 @@
             android:layout_margin="16dp"
             android:src="@drawable/ic_perf"
             fab:fab_colorNormal="@color/primary"/>
+        -->
 
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_icon="@drawable/ic_perf"
+            fab:fab_colorNormal="@color/pink"
+            fab:fab_colorPressed="@color/pink_pressed"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="10dp"/>
 
     </FrameLayout>
 </RelativeLayout>
