--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,7 @@
     <color name="db_green_dao">#388E3C</color>
     <color name="db_active_android">#9C27B0</color>
     <color name="db_dbflow">#FF5722</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black_semi_transparent">#B2000000</color>
 
 </resources>
