--- a/app/src/main/res/layout/activity_db_testing.xml
+++ b/app/src/main/res/layout/activity_db_testing.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="#33b5e5"
+        android:background="@color/accent"
         android:textColor="#fff"
         android:paddingTop="4dp"
         android:paddingBottom="4dp" />
