--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -93,6 +93,7 @@
     </RelativeLayout>
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/menuFabBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
